# ASC-bla

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  setup.py  test_alpha  test_newmark  test_ode
Neosoft/: __init__.py
Neosoft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  cppreference.rst  index.rst  installation.rst  pyreference.rst  requirements.txt
docs/cppreference/: index.rst  lapack.rst  matrix.rst  vector.rst
docs/neohpc/: index.rst  simd.rst
docs/neoode/: functions.rst  index.rst  mass_spring.rst  network.rst  solvers.rst
mass_spring/: test_mass_spring
py_tests/: test_lapack.py  test_matrix.py  test_vector.py
src/: bind_bla.cpp  bind_cla.cpp  expression.h  fastmult.cpp  fastmult.h  fastmult.hpp  forward_decl.h  lapack_interface.h  matrix.h  matrix_expression.h  vector.h
tests/: CMakeLists.txt  test_fastmult.cc  test_lapack.cc  test_matrix.cc  test_vector  test_vector.cc
